syntax = "proto3";

import "p2p.proto";
import "wallet.proto";
import "blockchain.proto";
import "db.proto";

package types;

message Config {
	string title = 1;
	string loglevel = 2;
	string logConsoleLevel = 10;
	string logFile = 9;
	Store store = 3;
	LocalStore localStore = 11;
	Consensus consensus = 4;
	MemPool memPool = 5;
	BlockChain blockChain = 6;
	Wallet wallet = 7;
	P2P p2p = 8;
}

message MemPool {
	int64 poolCacheSize = 1;
	int64 minTxFee = 2;
}

message MempoolSize {
	int64 size = 1;
}

message Consensus {
	string name = 1;
	string genesis = 2;
	bool minerstart = 3;
	int64 genesisBlockTime = 4;
	string hotkeyAddr = 5;
}
